# locomotive_air_cleaner_capstone

./: .gitignore  LICENSE  README.md
Arduino_sketches_pre_ROS2/: test
Arduino_sketches_pre_ROS2/ALLIOX_PPP_V3_01/: ALLIOX_PPP_V3_01.ino
Arduino_sketches_pre_ROS2/amhun_piduino_test/piduino_test_01/: piduino_test_01.ino
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/air_cleaning_pkg/: package.xml  setup.cfg  setup.py
src/air_cleaning_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/air_cleaning_pkg/launch/: launch.py
src/air_cleaning_pkg/log/: latest_build
src/amos01/: package.xml  setup.cfg  setup.py
src/arduino_inos/: PMSAtest_arduino2pi.ino  Status_Display_Oled_Demo01.ino  piduino_test_01.ino
src/e_nav/: package.xml  setup.cfg  setup.py
src/hello_august/: setup.cfg  setup.py
src/hello_user1/: package.xml  setup.cfg  setup.py
src/new_token_test_pkg/: package.xml  setup.cfg  setup.py
src/piduino02/: package.xml  setup.cfg  setup.py
src/piduino02/arduinoinos/Archives/: piduino02_arch02.ino  piduino02v2_arch02.ino
src/piduino02/arduinoinos/Archives/piduino_test_01/: piduino_test_01.ino
src/piduino02/arduinoinos/piduino02/: piduino02.ino
src/piduino02/arduinoinos/piduino02v2/: piduino02v2.ino
src/piduino02/piduino02/: controller.py  controller_arch01.py  controller_arch02.py  encoderwatch.py  motortest.py  oled_display.py  serial_publisher.py
src/piduino02/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/ultrasonic_publisher/: ReadMe.txt  package.xml  setup.py
(+23 files in other folders)
